--- a/style.css
+++ b/style.css
@@ -134,3 +134,25 @@ input[type="submit"] {
     height: 40px;
     padding: 0 2px;
 }
+
+footer {
+    text-align: center;
+    height: 50px;
+    margin-top: -50px;
+}
+
+footer a {
+    color: #000000;
+    text-transform: uppercase;
+    font-weight: bold;
+    margin-right: 8px;
+}
+
+.text-small {
+    font-size: 12px;
+    font-weight: bold;
+    color: gray;
+    text-transform: uppercase;
+    padding-left: 20px;
+    display: inline-block;
+}
