--- a/style.css
+++ b/style.css
@@ -139,6 +139,9 @@ footer {
     text-align: center;
     height: 50px;
     margin-top: -50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 footer a {
@@ -167,7 +170,7 @@ footer a {
 }
 
 .message {
-    margin: 10px 70px;
+    margin: 5px 70px;
 }
 
 .message span {
@@ -180,8 +183,8 @@ footer a {
 
 .cta-button {
     width: 320px;
-    margin: 10px 0;
-    height: 35px;
+    margin: 5px 0;
+    height: 30px;
     background-color: #3c96ed;
     color: #fff;
     border: 0;
@@ -189,4 +192,24 @@ footer a {
     font-size: 15px;
     cursor: pointer;
     font-weight: bold;
+}
+
+.divisor-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 5px 0;
+}
+
+.line {
+    height: 1px;
+    background-color: #e6e6e6;
+    width: 35%;
+}
+
+.divisor-tag {
+    font-weight: bold;
+    margin: 0 2.5%;
+    color: #8e8e8e;
+    user-select: none;
 }
