--- a/style.css
+++ b/style.css
@@ -10,7 +10,9 @@ a {
 }
 
 body {
-    background: #FAFAFA;
+    --background: #FAFAFA;
+
+    background: var(--background);
     height: 100%;
     width: 100%;
     font-family: Arial, Helvetica, sans-serif;
@@ -212,4 +214,42 @@ footer a {
     margin: 0 2.5%;
     color: #8e8e8e;
     user-select: none;
+}
+
+/* RESPONSIVIDADE */
+@media (max-width: 850px) {
+    .left {
+        display: none;
+    }
+
+    #container {
+        width: 70%;
+    }
+
+    .right {
+        padding-left: 0;
+    }
+}
+
+@media (max-width: 560px) {
+    #container {
+        width: 90%;
+        min-width: auto;
+    }
+
+    #container-signup {
+        width: 90%;
+    }
+
+    input[type="password"], input[type="text"], input[type="submit"] {
+        width: 80%;
+    }
+
+    .cta-button {
+        width: 85%;
+    }
+
+    .message {
+        margin: 10px 25px;
+    }
 }
