--- a/style.css
+++ b/style.css
@@ -5,12 +5,16 @@
 }
 
 a {
-    color: #3c96ed;
+    color: var(--button-primary);
     text-decoration: none;
 }
 
 body {
     --background: #FAFAFA;
+    --white: #ffffff;
+    --black: #000000;
+    --button-primary: #3c96ed;
+    --border-primary: #e6e6e6;
 
     background: var(--background);
     height: 100%;
@@ -20,7 +24,7 @@ body {
     line-height: 18px;
 }
 
-/* */
+/* INDEX */
 #wrapper {
     height: 100vh;
 }
@@ -52,8 +56,8 @@ body {
 }
 
 .login-panel {
-    background-color: #fff;
-    border: 1px solid #e6e6e6;
+    background-color: var(--white);
+    border: 1px solid var(--border-primary);
     text-align: center;
     padding: 20px 0;
 }
@@ -70,15 +74,15 @@ form {
 }
 
 input[type="password"], input[type="text"] {
-    background-color: #fff;
-    border: 1px solid rgb(236, 234, 234);
+    background-color: var(--white);
+    border: 1px solid var(--border-primary);
     height: 40px;
     border-radius: 4px;
     margin-top: 10px;
     padding: 10px;
     font-size: 13px;
     width: 320px;
-    color: #000000;
+    color: var(--black);
 }
 
 input[type="password"]::placeholder, input[type="text"]::placeholder {
@@ -95,9 +99,9 @@ input[type="submit"] {
     margin-top: 10px;
     height: 30px;
     border: 0;
-    background-color: #3c96ed;
+    background-color: var(--button-primary);
     border-radius: 4px;
-    color: #fff;
+    color: var(--white);
     font-size: 16px;
     font-weight: bold;
     margin-bottom: 10px;
@@ -105,9 +109,9 @@ input[type="submit"] {
 }
 
 .infobox {
-    background-color: #fff;
+    background-color: var(--white);
     height: 60px;
-    border: 1px solid rgb(236, 234, 234);
+    border: 1px solid var(--border-primary);
     margin: 10px auto 0;
     display: flex;
     align-items: center;
@@ -147,7 +151,7 @@ footer {
 }
 
 footer a {
-    color: #000000;
+    color: var(--black);
     text-transform: uppercase;
     font-weight: bold;
     margin-right: 8px;
@@ -187,8 +191,8 @@ footer a {
     width: 320px;
     margin: 5px 0;
     height: 30px;
-    background-color: #3c96ed;
-    color: #fff;
+    background-color: var(--button-primary);
+    color: var(--white);
     border: 0;
     border-radius: 4px;
     font-size: 15px;
@@ -205,7 +209,7 @@ footer a {
 
 .line {
     height: 1px;
-    background-color: #e6e6e6;
+    background-color: var(--border-primary);
     width: 35%;
 }
 
